# claude-code-migration

./: .gitignore  CHANGELOG.md  LICENSE  MIGRATION_STRATEGY.md  README.md  _config.yml  idea.md  index.html  pyproject.toml
skills/claude-full-migration/: SKILL.md
skills/hermes-migration/: SKILL.md
src/claude_code_migration/: __init__.py  __main__.py  canonical.py  cowork.py  hub.py  panic_backup.py  scanner.py  secrets.py
src/claude_code_migration/adapters/: __init__.py  base.py  cursor.py  hermes.py  opencode.py  windsurf.py
src/claude_code_migration/sources/: __init__.py  claude_chat_zip.py  claude_code.py  cursor.py  hermes.py  opencode.py  windsurf.py
tests/: test_dossier_rehydrate.py  test_e2e.py  test_e2e_live.py  test_hub.py  test_panic_backup.py  test_roundtrip.py
